--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+* {box-sizing: border-box}
 html {
     height: 100%;
     margin: 0;
     -webkit-font-smoothing: antialiased;
   }
-  body {
+body {
     background-color: #a7f5f5;
     color: rgb(102, 101, 102);
     position: relative;
@@ -14,14 +15,15 @@ html {
     box-sizing: border-box;
     padding: 36px;
   }
-  h1 {
+
+h1 {
     font-size: 35px;
   text-transform: uppercase;
   font-family: 'Insert', cursive;
   margin-top: 0;
   margin-bottom: 24px
   }
-  .first {
+.first {
     width: 600px;
     height: 125px;
     text-align: center;
@@ -32,35 +34,46 @@ html {
     left: 200px;
   }
 
-  .main2 {
+
+.tab{
     height: 100%;
     width: 200px;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: rgb(10, 9, 9);
     overflow-x: hidden;
     padding-top: 20px;
 }
 
-.sidenav {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
+.tab button {
     display: block;
+    background-color: inherit;
+    color: rgb(226, 223, 223);
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
 }
 
-.sidenav:hover {
-    color: #f1f1f1;
+.tab button:hover {
+    background-color: rgb(77, 76, 76);
 }
 
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
+.tab button.active {
+    background-color: rgb(129, 129, 129);
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    color: rgb(32, 32, 82);
+    width: 70%;
+    border-left: none;
+    height: 300px;
 }
